--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -1,6 +1,10 @@
 // --------- COLORS --------- //
 $mainGreen: #03b551;
+$secondaryGreen: #a1e3be;
+$tertiaryGreen: #02883d;
 $mainBlue: #08b9bd;
+$secondaryBlue: #a2e5e6;
+$tertiaryBlue: #068b8e;
 $mainViolet: #6d42f1;
 $white: #fafafa;
 $black: #202020;
