--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -8,6 +8,7 @@ $tertiaryBlue: #068b8e;
 $mainViolet: #6d42f1;
 $white: #fafafa;
 $black: #202020;
+$grey: #20202010;
 
 // --------- FONTS --------- //
 @font-face {
