Add hover effect

--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -6,6 +6,7 @@ $mainBlue: #08b9bd;
 $secondaryBlue: #a2e5e6;
 $tertiaryBlue: #068b8e;
 $mainViolet: #6d42f1;
+$secondaryViolet: #c4b7ec;
 $white: #fafafa;
 $black: #202020;
 $grey: #20202010;
