Add alpha colors

--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -1,11 +1,14 @@
 // --------- COLORS --------- //
 $mainGreen: #03b551;
+$mainGreen25: #03b55047;
 $secondaryGreen: #a1e3be;
 $tertiaryGreen: #02883d;
 $mainBlue: #08b9bd;
+$mainBlue25: #08b9bd51;
 $secondaryBlue: #a2e5e6;
 $tertiaryBlue: #068b8e;
 $mainViolet: #6d42f1;
+$mainViolet25: #6d42f151;
 $secondaryViolet: #c4b7ec;
 $white: #fafafa;
 $black: #202020;
